[package]
name = "tl_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
clap-stdin = { version = "0.6.0", features = ["clap"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
