[package]
name = "tl_tool"
version = "0.1.0"
authors = ["Adam Roesner <aaroesner@gmail.com>"]
license = "MIT"
description = "A helper tool for managing tl strings"
repository = "https://github.com/roesnera/tl_tool"
keywords = ["cli", "livedoc"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chromium-base64-rs = "0.1.0"
clap = { version = "4.5.37", features = ["derive"] }
